# crawlio-py

./: pyproject.toml  readme.md  setup.cfg
.github/workflows/: publish.yml
crawlio/: client.py  exception.py  types.py
