[metadata]
name = crawlio-py
version = 0.1.4
description = Python SDK for the Crawlio web scraping API
long_description = file: README.md
long_description_content_type = text/markdown
author = Kishan Sharma
author_email = kisshan07@outlook.com
license = MIT
license_file = LICENSE
url = https://crawlio.xyz
project_urls =
    Documentation = https://github.com/weekend-dev-labs/crawlio-py
    Source = https://github.com/weekend-dev-labs/crawlio-py

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.package_data]
* = *.md, LICENSE
